# materials-review-audit-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt  skill.md
.github/workflows/: tests.yml
config/: audit_rules.yaml
docs/: architecture.md
examples/: run_demo.py
examples/input/: figures_manifest.json  manuscript_excerpt.md  reference_numbers.csv
examples/input/databases/: descriptor_database.csv
examples/input/source_data/: fig3_descriptor_coverage.csv  fig7_spearman_heatmap.csv  orphan_old_fig7.csv
prompts/: 01_inventory_agent.md  02_context_pack_agent.md  03_claim_ledger_agent.md  04_source_data_ledger_agent.md  05_descriptor_database_agent.md  06_figure_text_agent.md  07_conflict_gate_agent.md  08_report_writer_agent.md
schemas/: audit_finding.schema.json  claim_ledger.schema.json  conflict_gate.schema.json  context_pack.schema.json  descriptor_audit.schema.json  source_data_ledger.schema.json
scripts/: run_audit.py
src/materials_review_audit/: claims.py  cli.py  conflict_gate.py  context_pack.py  descriptors.py  extractors.py  figures.py  numbers.py  report.py  source_data.py  utils.py
tests/: test_demo.py
