[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-review-audit-skill"
version = "0.2.0"
description = "Multi-agent JSON-first audit workflow for materials review manuscripts and figures."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Materials Review Audit Skill"}]
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "PyYAML>=6.0.0",
    "jsonschema>=4.21.0"
]

[project.scripts]
materials-review-audit = "materials_review_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
