[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-review-audit"
version = "1.1.0"
description = "Codex-native multi-agent skill for chemical and materials engineering review manuscript audits."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "materials-review-audit-skill contributors"}]
license = {text = "MIT"}
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "python-docx>=1.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
materials-review-audit = "materials_review_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
